# blog

backend/: Cargo.toml
backend/migrations/2019-09-26-093856_blogs/: down.sql  up.sql
backend/src/: blog.rs  cors.rs  db.rs  main.rs  post.rs  schema.rs  security.rs
frontend/: package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  router.ts  store.ts
frontend/src/assets/css/: app.css  blog.css
frontend/src/components/: BlogView.ts  HomeView.ts  blog.html  home.html
frontend/src/components/Post/: AddPostForm.ts  ShowPost.ts  add_post_form.html  showPost.html
frontend/src/services/: BlogService.ts  LoginService.ts  PostService.ts
frontend/src/types/: Events.ts  IBlog.ts  IPost.ts  PostDTO.ts  StatusMessage.ts
frontend/src/views/: Blog.vue  Home.vue  Post.vue
