[package]
name = "backend"
version = "0.1.0"
authors = ["anon <anon@thecout.com>"]
edition = "2018"


[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.4.2"
r2d2 = "0.8.5"
r2d2-diesel = "1.0.0"
diesel = { version = "1.4.6", features = ["mysql", "r2d2"] }
dotenv = "0.9.0"
bcrypt = "0.6"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]

